--- a/allstars-game/Base.lproj/Main.storyboard
+++ b/allstars-game/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,32 +17,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="EwI-qB-LW7">
-                                <rect key="frame" x="910" y="490" width="100" height="100"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SCORE:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRU-lV-dTu">
-                                <rect key="frame" x="20" y="20" width="180" height="40"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dr-Io-MGN">
-                                <rect key="frame" x="208" y="17" width="134" height="46"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arf-NM-YTo">
+                                <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="EwI-qB-LW7">
+                                        <rect key="frame" x="910" y="490" width="100" height="100"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y7g-n2-Gxe">
+                                <rect key="frame" x="30" y="18" width="240" height="128"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4W-6V-kTm">
+                                        <rect key="frame" x="8" y="8" width="112" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V3k-sT-dJk">
+                                        <rect key="frame" x="128" y="8" width="20" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="V3k-sT-dJk" firstAttribute="leading" secondItem="k4W-6V-kTm" secondAttribute="trailing" constant="8" id="FTn-ib-9qN"/>
+                                    <constraint firstItem="k4W-6V-kTm" firstAttribute="top" secondItem="Y7g-n2-Gxe" secondAttribute="top" constant="8" id="PYe-2r-qap"/>
+                                    <constraint firstAttribute="width" constant="240" id="RKL-jD-tK3"/>
+                                    <constraint firstItem="k4W-6V-kTm" firstAttribute="leading" secondItem="Y7g-n2-Gxe" secondAttribute="leading" constant="8" id="byd-7O-XcD"/>
+                                    <constraint firstItem="V3k-sT-dJk" firstAttribute="baseline" secondItem="k4W-6V-kTm" secondAttribute="baseline" id="r3N-S0-RhC"/>
+                                    <constraint firstAttribute="height" constant="128" id="uTw-5x-zoa"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="arf-NM-YTo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="93x-kM-cyb"/>
+                            <constraint firstItem="Y7g-n2-Gxe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="18" id="O1k-CD-7Ld"/>
+                            <constraint firstItem="arf-NM-YTo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VVi-fd-vlh"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="arf-NM-YTo" secondAttribute="bottom" id="Ywi-vr-aiu"/>
+                            <constraint firstItem="Y7g-n2-Gxe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="aZK-La-Tvq"/>
+                            <constraint firstAttribute="trailing" secondItem="arf-NM-YTo" secondAttribute="trailing" id="gso-GD-9bj"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="crosshair" destination="EwI-qB-LW7" id="q78-VH-YLL"/>
-                        <outlet property="score" destination="5Dr-Io-MGN" id="zYd-EM-VPN"/>
+                        <outlet property="playground" destination="arf-NM-YTo" id="pTN-Fn-WGC"/>
+                        <outlet property="scoreView" destination="V3k-sT-dJk" id="mBb-pl-zlp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="215" y="549"/>
+            <point key="canvasLocation" x="319" y="561"/>
         </scene>
     </scenes>
     <resources>
